--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -103,6 +103,7 @@
 #main_body .routine_total p:first-child {
   background-color:#797eff;
   border-bottom-right-radius:1.5rem;
+  border-bottom-left-radius:1.5rem;
   padding:0 1rem 0.5rem 0;
   font-size:0.9rem;
   letter-spacing:-0.02rem;
@@ -159,7 +160,7 @@
 }
 
 #main_body .routine_total p span a.not_done {
-  background: url('https://img.icons8.com/ios-glyphs/30/neutral-emoticon--v1.png') no-repeat 0.2rem 50%/1.5rem 1.5rem #fff;
+  background: url('https://img.icons8.com/ios-glyphs/30/neutral-emoticon--v1.png') no-repeat 0.2rem 50%/1.5rem 1.5rem;
 }
 
 #main_body .routine_total p span a.not_done {
@@ -167,16 +168,27 @@
 }
 
 #main_body .routine_total p span a.done {
-  background: url('https://img.icons8.com/ios-glyphs/30/lol--v1.png') no-repeat 0.2rem 50%/1.5rem 1.5rem #80daff;
+  background: url('https://img.icons8.com/ios-glyphs/30/lol--v1.png') no-repeat 0.2rem 50%/1.5rem 1.5rem;
+}
+
+#main_body .routine_total p span a.done {
+ background-color:#80daff!important
 }
 
 #main_body .routine_total p span a.fail_done {
-  background: url('https://img.icons8.com/ios-glyphs/30/sad.png') no-repeat 0.2rem 50%/1.5rem 1.5rem #f1afff;
+  background: url('https://img.icons8.com/ios-glyphs/30/sad.png') no-repeat 0.2rem 50%/1.5rem 1.5rem;
 }
 
+#main_body .routine_total p span a.fail_done {
+  background-color:#f1afff!important;
+}
 
 #main_body .routine_total p span a.ignored {
-  background: url('https://img.icons8.com/ios-glyphs/30/confused--v1.png') no-repeat 0.2rem 50%/1.5rem 1.5rem #cfcfcf;
+  background: url('https://img.icons8.com/ios-glyphs/30/confused--v1.png') no-repeat 0.2rem 50%/1.5rem 1.5rem;
+}
+
+#main_body .routine_total p span a.ignored {
+  background-color:#cfcfcf!important;
 }
 
 #main_body .routine_total .filter_row {
