--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -73,6 +73,7 @@
   font-size: 1rem;
   color: #999;
   box-sizing: border-box;
+  border:1px solid red;
 }
 #main_body .date_scroll .date_group i,
 #main_body .date_fixed_today i {
@@ -88,7 +89,8 @@
   color:#333!important;
   font-weight:bold!important;
   background-color:#fff!important;
-  border:none!important
+  border:none!important;
+  background: url('https://img.icons8.com/ios-glyphs/30/full-stop--v1.png') no-repeat top center/0.5rem 0.5rem;
 }
 
 #main_body .date_fixed_today span.on {
