--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -69,8 +69,8 @@
 }
 
 #footer {
-  height: 4rem;
-  background-color: #fff;
+  padding:2rem;
+  background-color: red;
   border-top: 1px solid #ececec;
   display: flex;
   }
