--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -69,8 +69,8 @@
 }
 
 #footer {
-  padding:2rem;
-  background-color: red;
+  padding:1.5rem ;
+  background-color:#fff;
   border-top: 1px solid #ececec;
   display: flex;
   }
