--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -204,7 +204,7 @@
   font-size:0.9rem;
   position:relative; 
   z-index:1;
-  margin-top:-2rem;
+  margin-top:-2.2rem;
   margin-bottom:1rem;
 }
 
@@ -221,6 +221,7 @@
 #main_body .routine_total .filter_row .filter_buttons button {
   display:inline-block; 
   line-height:3rem;
+  height:3rem;
   background-color:#ebeffd;
   text-align:center;
   color:#93a7ff;
