--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -199,7 +199,6 @@
 
 #main_body .routine_total .filter_row {
   display: flex;
-  height:5.2rem;
   justify-content: space-between;
   align-items: center;
   font-size:0.9rem;
@@ -222,8 +221,8 @@
 #main_body .routine_total .filter_row .filter_buttons button {
   display:inline-block; 
   line-height:3rem;
-  height:3rem;
   background-color:#ebeffd;
+  border:1px solid #ebeffd;
   text-align:center;
   color:#93a7ff;
   font-size:0.9rem;
