--- a/src/assets/css/ar_popup.css
+++ b/src/assets/css/ar_popup.css
@@ -321,7 +321,9 @@
 }
 
 .monthly-grid span.m_s_btn { 
-	width: 100%;        
+	width:1.8rem;
+	height:1.8rem;
+  border:1px solid red;
   aspect-ratio: 1 / 1; 
 	display:inline-block;
 	margin-bottom:0.5rem;
