--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -450,5 +450,6 @@
   background-size:100%!important
 }
 
-#main_body .routine_card.walk_mode {
+#main_body .routine_card.walk_mode .walk_check button {
+  width:100%;
 }
