--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -450,6 +450,6 @@
   background-size:100%!important
 }
 
-#main_body .routine_card.walk_mode .walk_check button {
-  width:100%!important;
+#main_body .routine_card.walk_mode .walk_check .p_white {
+  width:100%;
 }
