--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -229,6 +229,7 @@
   font-weight:bold;
   margin:0;
   padding:0;
+  padding-top:1rem;
   border-radius:0;
   border-bottom-left-radius:1.5rem;
   border-bottom-right-radius:1.5rem;
