--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -227,8 +227,7 @@
   font-size:0.9rem;
   font-weight:bold;
   margin:0;
-  padding:0;
-  padding-top:2rem;
+  padding:2.5rem 0 0.5rem 0;
   border-radius:0;
   border-bottom-left-radius:1.5rem;
   border-bottom-right-radius:1.5rem;
