--- a/src/assets/css/popup.css
+++ b/src/assets/css/popup.css
@@ -32,7 +32,7 @@ body.no-scroll {
 
 .com_popup_wrap .popup_inner {
   width: 90%;
-  max-width: 20rem;
+  max-width: 90%;
 	position:relative;
   background: #fff;
   padding: 2rem!important;
