--- a/src/assets/css/walk_status_pop.css
+++ b/src/assets/css/walk_status_pop.css
@@ -1,5 +1,6 @@
 .com_popup_wrap.walk_status .popup_inner {
   width:90vw;
+  max-width:90vw;
   height:80vh;
   height:80dvh;
   background-color:Red;
