--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -449,3 +449,16 @@
   background-size:100%!important
 }
 
+#main_body .toady_tools {
+  margin-bottom: 1rem;
+  display: flex;
+  justify-content: center;
+}
+
+#main_body .toady_tools .today {
+  font-family:'S-CoreDream-6Bold'
+}
+
+#main_body .tools {
+  margin-left: auto; 
+}
