--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -457,6 +457,8 @@
 
 #main_body .today_tools .today {
   font-family:'S-CoreDream-6Bold'
+  text-align:center;
+  font-size:1.4rem;
 }
 
 #main_body .tools {
