--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -456,7 +456,7 @@
 }
 
 #main_body .today_tools .today {
-  font-family:'S-CoreDream-6Bold'
+  font-family:'S-CoreDream-6Bold';
   text-align:center;
   font-size:1.4rem;
 }
