--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -452,13 +452,17 @@
 #main_body .today_tools {
   margin-bottom: 1rem;
   display: flex;
-  justify-content: center;
+  justify-content: flex-end; 
+  position: relative; 
 }
 
 #main_body .today_tools .today {
-  font-family:'S-CoreDream-6Bold';
-  text-align:center;
-  font-size:1.4rem;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  font-family: 'ONE-Mobile-POP';
+  font-size: 1.4rem;
+  text-align: center;
 }
 
 #main_body .tools {
