--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -473,12 +473,14 @@
   width:1rem;
   height:1rem;
   display:inline-block;
+  border:1px solid red;
 }
 
 #main_body .today_tools .tools a {
   width:2rem;
   height:2rem;
   display:inline-block;
+  border:1px solid green;
 }
 
 #main_body .today_tools .today a.prev {
