--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -471,9 +471,10 @@
 }
 
 #main_body .today_tools a {
-  width: 2rem;
-  height: 2rem;
+  width: 1rem;
+  height: 1rem;
   display: inline-block;
+  vertical-align:middle;
 }
 
 #main_body .today_tools a.prev {
