--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -462,8 +462,13 @@
   left: 50%;
   transform: translateX(-50%);
   font-family: 'S-CoreDream-6Bold';
-  font-size: 1.2rem;
+  font-size: 1rem;
   text-align: center;
+}
+
+#main_body .today_tools .today p {
+  width:10rem;
+  background-color:red
 }
 
 #main_body .today_tools a span {
