--- a/src/assets/css/select.css
+++ b/src/assets/css/select.css
@@ -36,26 +36,27 @@
   text-align:center;
 }
 
-.select_ruffy .ruffys a span.img {
-  width: 100%;
-  height: 2.5rem;
-  display: flex; 
-  align-items: center; 
-  justify-content: center; 
-  text-align: center;
-  margin-bottom:0.5rem
-}
-
+.select_ruffy .ruffys a span.img,
 .select_course .course a span.img,
 .select_card .card a span.img {
   width: 100%;
-  height: 5rem;
   display: flex; 
   align-items: center; 
   justify-content: center; 
   text-align: center;
   margin-bottom:0.2rem
 }
+
+.select_ruffy .ruffys a span.img {
+  height: 2.5rem;
+}
+.select_course .course a span.img {
+  height: 5rem;
+}
+.select_card .card a span.img {
+  height: 3rem;
+}
+
 
 .select_ruffy .ruffys a span.img img,
 .select_course .course a span.img img,
