--- a/src/assets/css/select.css
+++ b/src/assets/css/select.css
@@ -55,6 +55,7 @@
 }
 .select_card .card a span.img {
   height: 3rem;
+  border:1px solid red;
 }
 
 
@@ -68,6 +69,7 @@
 ,
 .select_card .card a span.img img {
   width:100%;
+  height:100%;
   border:1px solid red;
   border-radius:0.5rem
 }
