--- a/src/assets/css/select.css
+++ b/src/assets/css/select.css
@@ -44,7 +44,8 @@
   align-items: center; 
   justify-content: center; 
   text-align: center;
-  margin-bottom:0.2rem
+  margin-bottom:0.2rem;
+  overflow:hidden;
 }
 
 .select_ruffy .ruffys a span.img {
