--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -6,7 +6,7 @@
   text-align: center;
   font-size:1.4rem;
   line-height:1.7rem;
-  background-image: url('../images/ico_crying.png');
+  /*background-image: url('../images/ico_crying.png');*/
   background-repeat: no-repeat;
   background-size: 5rem 5rem;
   background-position: top center;
