--- a/src/assets/css/select.css
+++ b/src/assets/css/select.css
@@ -348,7 +348,7 @@
   background: url('../images/hey_ruffy_temp04.png') no-repeat 0 0/cover;
 }
 
-.routine_card.card_option01 {  }
+.routine_card.card_option01 { border:1px solid #eaeaea!important }
 .routine_card.card_option02 { border:1px solid yellow!important; }
 .routine_card.card_option03 { border:1px solid skyblue!important; }
 .routine_card.card_option04 { border:1px solid orange!important; }
