--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -282,6 +282,7 @@
   position: relative;
 }
 
+
 #main_body .routine_card .rc_inner {
   display: flex;
   align-items: flex-start;
@@ -435,6 +436,10 @@
 #main_body .routine_card .rc_inner .walk_check {
   width:100%;
   flex-basis: 100%;
+}
+
+#main_body .routine_card .rc_inner .done_set .p_white.disabled_btn { 
+  pointer-events: none; 
 }
 
 #main_body .routine_card .rc_inner .ruffys_item span {
