--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -438,7 +438,7 @@
   flex-basis: 100%;
 }
 
-#main_body .routine_card.rt_off .done_set .p_white.disabled_btn { 
+#main_body .routine_card.rt_off .p_white { 
   pointer-events: none; 
 }
 
