--- a/src/assets/css/walk_status_pop.css
+++ b/src/assets/css/walk_status_pop.css
@@ -19,14 +19,14 @@
 }
 
 .routine_card.course01 {
-  border:1px solid red
+  border:1px solid red!important
 }
 .routine_card.course02 {
-  border:1px solid blue
+  border:1px solid blue!important
 }
 .routine_card.course03 {
-  border:1px solid green
+  border:1px solid green!important
 }
 .routine_card.course04 {
-  border:1px solid purple
+  border:1px solid purple!important
 }
