--- a/src/assets/css/walk_status_pop.css
+++ b/src/assets/css/walk_status_pop.css
@@ -5,6 +5,7 @@
   height:80dvh;
 }
 
+/*
 .walk_pop_wrap.course01 {
   border:1px solid red
 }
@@ -30,3 +31,4 @@
 .routine_card.course04 {
   border:1px solid purple!important
 }
+*/
