--- a/src/assets/css/walk_status_pop.css
+++ b/src/assets/css/walk_status_pop.css
@@ -5,7 +5,7 @@
   height:80dvh;
 }
 
-.walk_pop [class^='walk_course'] {
+.walk_pop_wrap [class^='walk_course'] {
   width:100%;
   height:100%;
   background-color:#eee;
