--- a/src/assets/css/walk_status_pop.css
+++ b/src/assets/css/walk_status_pop.css
@@ -5,6 +5,10 @@
   height:80dvh;
 }
 
+.walk_pop_wrap {
+  background-color:blue
+}
+
 .walk_pop_wrap [class^='walk_course'] {
   width:100%;
   height:100%;
