--- a/src/assets/css/walk_status_pop.css
+++ b/src/assets/css/walk_status_pop.css
@@ -1,15 +1,32 @@
 .com_popup_wrap.walk_status .popup_inner {
   width:90vw;
   max-width:90vw;
-  height:80vh;
   height:80dvh;
+  display:flex;
+  flex-direction:column;
   background-color:red;
 }
 
+.com_popup_wrap.walk_status .popup_tit { 
+  flex:0 0 auto;
+}
+
+.com_popup_wrap.walk_status .popup_body {
+  flex:1 1 auto;
+  min-height:0;
+  overflow:auto;
+  padding:0;
+}
+
+.com_popup_wrap.walk_status .popup_btm {
+  flex:0 0 auto;
+}
+
 .walk_pop_wrap {
+  position:relative;
   width:100%;
   height:100%;
-  background-color:blue
+  background-color:blue;
 }
 
 .walk_pop_wrap [class^='walk_course'] {
@@ -17,7 +34,6 @@
   height:100%;
   background-color:#eee;
 }
-
 /*
 .walk_pop_wrap.course01 {
   border:1px solid red
