--- a/src/assets/css/walk_status_pop.css
+++ b/src/assets/css/walk_status_pop.css
@@ -4,9 +4,8 @@
   height:80dvh;
   display:flex;
   flex-direction:column;
-  background-color:red;
 }
-
+/*
 .com_popup_wrap.walk_status .popup_tit { 
   flex:0 0 auto;
 }
@@ -20,13 +19,12 @@
 
 .com_popup_wrap.walk_status .popup_btm {
   flex:0 0 auto;
-}
+}*/
 
 .walk_pop_wrap {
   position:relative;
   width:100%;
   height:100%;
-  background-color:blue;
 }
 
 .walk_pop_wrap [class^='walk_course'] {
