--- a/src/assets/css/walk_status_pop.css
+++ b/src/assets/css/walk_status_pop.css
@@ -31,8 +31,13 @@
   width:100%;
   height:100%;
   margin-top:2rem;
-  border-radius:1.5rem;
   background-color:#eee;
+}
+
+.walk_pop_wrap [class^='walk_course'] img {
+  border-radius:1.5rem;
+  border:1px solid red;
+  opacity:0.1;
 }
 
 /*
