--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -139,10 +139,13 @@ button.control {
   background: url('../images/ico_shop.png') no-repeat 0 0/100%;
 }
 
-#main_wrap{min-height:calc(var(--vh,1vh)*100);display:flex;flex-direction:column}
-#main_body{flex:1;display:flex;flex-direction:column;overflow:hidden}
-.main_fixed{flex-shrink:0}
-.main_scroll{flex:1;overflow-y:auto;-webkit-overflow-scrolling:touch;padding-bottom:var(--footer-h,64px)}
-.no_data{display:flex;flex-direction:column;align-items:center;justify-content:center;text-align:center;font-size:1.4rem;line-height:1.7rem;padding-top:10rem}
+#main_wrap {min-height:calc(var(--vh,1vh)*100);display:flex;flex-direction:column}
+#main_body {flex:1;display:flex;flex-direction:column;overflow:hidden}
+.main_fixed {
+  border:1px solid red;
+  flex-shrink:0
+}
+.main_scroll {flex:1;overflow-y:auto;-webkit-overflow-scrolling:touch;padding-bottom:var(--footer-h,64px)}
+.no_data {display:flex;flex-direction:column;align-items:center;justify-content:center;text-align:center;font-size:1.4rem;line-height:1.7rem;padding-top:10rem}
 .no_data span{display:block;color:#666;font-size:1rem;margin-top:0.5rem}
 
