--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -19,8 +19,8 @@
   align-items: center;
   padding:1rem; 
   box-sizing: border-box;
-  background-color:#fff;
-  border-bottom: 1px solid #ececec;
+  /*background-color:#fff;
+  border-bottom: 1px solid #ececec;*/
 }
 
 #header .left,
@@ -62,7 +62,7 @@
   left: 0;
   width: 70%;
   height: calc(var(--vh, 1vh) * 100);
-  background-color: #fff;
+  /*background-color: #fff;*/
   padding: 2rem;
   z-index: 1000; 
   overflow-y: auto;
@@ -70,8 +70,8 @@
 
 #footer {
   padding:1.5rem ;
-  background-color:#fff;
-  border-top: 1px solid #ececec;
+  /*background-color:#fff;
+  border-top: 1px solid #ececec;*/
   display: flex;
   }
 
@@ -91,7 +91,7 @@
   overflow-y: auto;
   -webkit-overflow-scrolling: touch;
   padding:1rem 1rem 2rem 1rem;
-  background-color:#fafafa;
+  /*background-color:#fafafa;*/
 }
 
 button.lnb {
