--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -70,8 +70,8 @@
 
 #footer {
   padding:1.5rem ;
-  /*background-color:#fff;
-  border-top: 1px solid #ececec;*/
+  /*background-color:#fff;*/
+  border-top: 1px solid #ececec;
   display: flex;
   }
 
