--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -142,7 +142,8 @@ button.control {
 #main_wrap {min-height:calc(var(--vh,1vh)*100);display:flex;flex-direction:column}
 #main_body {flex:1;display:flex;flex-direction:column;overflow:hidden}
 .main_fixed {
-  flex-shrink:0
+  flex-shrink:0;
+  border:1px solid green;
 }
 .main_scroll {flex:1;overflow-y:auto;-webkit-overflow-scrolling:touch;padding-bottom:var(--footer-h,64px)}
 .no_data {display:flex;flex-direction:column;align-items:center;justify-content:center;text-align:center;font-size:1.4rem;line-height:1.7rem;padding-top:10rem}
