--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -17,7 +17,7 @@
   display: flex;
   width: 100%;
   align-items: center;
-  padding:1rem; 
+  padding:1rem 1rem 0 1rem; 
   box-sizing: border-box;
   /*background-color:#fff;
   border-bottom: 1px solid #ececec;*/
