--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -23,6 +23,7 @@
 }
 
 #main_body .date_scroll {
+  width:100%;
   display: flex;
   position: relative;
   overflow-x: auto;
@@ -41,7 +42,8 @@
   width: 100%;              
   display: flex;            
   justify-content: center; 
-  gap: 0.2rem;                
+  gap: 0.2rem;        
+  border:1px solid red;
 }
 
 
