--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -93,10 +93,11 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 0.6rem 1rem;
+  padding: 0.5rem;
   line-height: 1.1rem;
   font-size: 1rem;
   color: #999;
+  background-color:#ccc
   box-sizing: border-box;
 }
 #main_body .date_scroll .date_group i,
@@ -120,8 +121,8 @@
 
 #main_body .date_fixed_today span.on_w_nt {
   border-radius:1rem;
-  background-color:#ff6c6c;
-  color:#fff;
+  background-color:#ff6c6c!important;
+  color:#fff!important;
 }
 
 
