--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -92,11 +92,11 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 0.5rem;
-  line-height: 1.1rem;
+  /*padding: 0.5rem;
+  line-height: 1.1rem;*/
   font-size: 1rem;
   color: #999;
-  background-color:#ccc;
+  background-color:#ccc!important;
   box-sizing: border-box;
 }
 #main_body .date_scroll .date_group i,
@@ -122,13 +122,13 @@
   border-radius:1rem;
   background-color:#ff6c6c!important;
   color:#fff!important;
+  border:1px solid green!important;
 }
 
 
 #main_body .routine_total {
   margin:0;
   position:relative;
-  border:1px solid red;
 }
 
 #main_body .routine_total p:first-child {
