--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -92,8 +92,8 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  /*padding: 0.5rem;
-  line-height: 1.1rem;*/
+  padding: 0.5rem;
+  line-height: 1.1rem
   font-size: 1rem;
   color: #999;
   background-color:#ccc!important;
@@ -102,7 +102,6 @@
 #main_body .date_scroll .date_group i,
 #main_body .date_fixed_today i {
   display:block;
-  color:#666;
   line-height:0.8rem;
   font-style:normal;
   font-size:0.6rem;
@@ -122,7 +121,6 @@
   border-radius:1rem;
   background-color:#ff6c6c!important;
   color:#fff!important;
-  border:1px solid green!important;
 }
 
 
