--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -93,7 +93,7 @@
   justify-content: center;
   align-items: center;
   padding: 0.5rem;
-  line-height: 1.1rem
+  line-height: 1.1rem;
   font-size: 1rem;
   color: #999;
   background-color:#ccc!important;
