--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -76,7 +76,7 @@
   display:flex;
   justify-content:flex-start;
   align-items:center;
-  gap:0.2rem;
+  gap:0.5rem;
   overflow-x:auto;                
   -webkit-overflow-scrolling:touch;
   white-space:nowrap;
@@ -112,7 +112,8 @@
   font-weight:bold!important;
   border:1px solid #333!important;
   background-color:#fff!important;
-  color:#333!important
+  color:#333!important;
+  border-radius:0.8rem!important;
  }
 
 #main_body .date_fixed_today span.on {
