--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -41,6 +41,7 @@
   border-bottom:none;*/
   padding:0.5rem 0rem 0.2rem 0rem;
   z-index:3;
+  border-top:1px solid #0994ff;;
 }
 
 #main_body .date_scroll .ruffys_item {
