--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -33,18 +33,11 @@
   align-items: center;
   gap: 0.3rem 0.2rem;
   position: relative;
-  /*border-radius:1.5rem;
-  border-bottom-left-radius: 0;
-  border-bottom-right-radius: 0;
-  background-color:#fff;
-  border:1px solid #eaeaea;
-  border-bottom:none;*/
   padding:0.5rem 0rem 0.2rem 0rem;
   z-index:3;
-  border-top:1px solid #0994ff;;
 }
 
-#main_body .date_scroll .top_line {
+#main_body .date_scroll .top_line.on {
   width:100%;
   height:1px;
 }
