--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -22,6 +22,12 @@
   font-family:'S-CoreDream-4Regular'
 }
 
+#main_body .top_line.on {
+  width:100%;
+  height:1px;
+  margin-bottom:0.5rem;
+}
+
 #main_body .date_scroll {
   width:100%;
   display:grid;
@@ -35,11 +41,6 @@
   position: relative;
   padding:0.5rem 0rem 0.2rem 0rem;
   z-index:3;
-}
-
-#main_body .top_line.on {
-  width:100%;
-  height:1px;
 }
 
 #main_body .date_scroll .ruffys_item {
