--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -139,14 +139,14 @@
   align-items: center;
   position:relative; 
   z-index:2;
-  background-color:Red;
+  border:1px solid #eaeaea;
+  padding:0.5rem;
 }
 
 #main_body .routine_total p:first-child span:first-child {
   display:inline-block;
   line-height:2.2rem;
   color:#333;
-  background-color:green;
 }
 
 #main_body .routine_total p:first-child span em {
