--- a/src/assets/css/m_routine.css
+++ b/src/assets/css/m_routine.css
@@ -141,6 +141,7 @@
   z-index:2;
   border:1px solid #eaeaea;
   padding:0.5rem;
+  border-radius:1rem;
 }
 
 #main_body .routine_total p:first-child span:first-child {
@@ -178,7 +179,7 @@
 #main_body .routine_total p span a em.t_on {
   color:#333!important
 }
-
+/*
 #main_body .routine_total p span a.not_done {
   background: url('../images/ico_notdone.png') no-repeat 0.2rem 50%/1.5rem 1.5rem;
 }
@@ -210,7 +211,7 @@
 #main_body .routine_total p span a.ignored {
   background-color:#cfcfcf!important;
 }
-
+*/
 #main_body .routine_total .filter_row {
   display: flex;
   justify-content: space-between;
